[package]
name = "ssd1306-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = "fat"


[dependencies]
rppal = { version = "^0.14", features = ["hal"] }
ssd1306 = "^0.7"
embedded-graphics = "^0.7"
local_ipaddress = "0.1.3"
embedded-hal = "0.2.7"
chrono = "0.4.23"
signal-hook = "0.3.17"
thiserror = "1.0.51"
anyhow = "1.0.76"
display-interface = "0.4.1"
