[package]
name = "ssd1306-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1


[dependencies]
rppal = { version = "^0.22.1", features = ["hal"] }
ssd1306 = "^0.9"
embedded-graphics = "^0.8.1"
local_ipaddress = "0.1.3"
embedded-hal = "1.0.0"
chrono = "0.4.40"
signal-hook = "0.3.17"
thiserror = "2.0.12"
anyhow = "1.0.97"
display-interface = "0.5.0"
procfs = "0.17.0"
